<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".feature.main.MainActivity">

        <ImageView
                android:id="@+id/icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/title"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/main_title"
                android:textAppearance="@style/Urbanist.Text.Title"
                android:gravity="center"
                android:foregroundGravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.59000003"/>

        <Button
                android:id="@+id/rulesButton"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/main_button_rules"
                android:background="@drawable/button_black_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Urbanist.Button"/>

        <Button
                android:id="@+id/reportButton"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/main_button_send_report"
                android:background="@drawable/button_red_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rulesButton"
                style="@style/Urbanist.Button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>